PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2007, Version 4.4.7
- Fixed bug #40747 (possible crash in session when save_path is out of 
  open_basedir). (Tony)

28 Feb 2007, Version 4.4.6

- Updated PCRE to version 7.0. (Nuno)
- Fixed segfault in ext/session when register_globals=On. (Tony)
- Fixed bug #40635 (segfault in cURL extension). (Tony)
- Fixed bug #40611 (possible cURL memory error). (Tony)
- Fixed bug #40578 (imagettftext() multithreading issue). (Tony)
- Fixed bug #40502 (ext/interbase compile failure). (Tony)
- Fixed bug #40286 (PHP fastcgi with PHP_FCGI_CHILDREN don't kill children when
  parent is killed). (Dmitry)
	
14 Feb 2007, Version 4.4.5
- Upgraded PEAR to 1.5.0. (Greg)
- Updated PCRE to version 6.7. (Ilia)
- Moved extensions to PECL:
  . ext/ovrimos (Derick)

- Added a meta tag to phpinfo() output to prevent search engines from 
  indexing the page. (Ilia)
- Backported a fix in the configure tests to detect the "rounding fuzz".
  (Derick, Joe Orton)
- Backported fix for ext/imap compilation failure with recent c-client 
  versions. (Tony)
- Fixed missing open_basedir check inside chdir() function. (Ilia)
- Fixed bug #40335 (Compile fails when using GCC 4.1.1/binutils 2.17). (Tony)
- Fixed bug #39971 (pg_insert/pg_update do not allow now() to be used for   
  timestamp fields). (Ilia)
- Fixed bug #39890 (using autoconf 2.6x and --with-layout=GNU breaks PEAR 
  install path). (Tony)
- Fixed bug #39819 (Using $this not in object context can cause segfaults).
  (Dmitry)
- Fixed bug #39653 (ext/dba doesn't check for db-4.5 and db-4.4 when db4 
  support is enabled). (Tony)
- Fixed bug #39583 (ftp_put() does not change transfer mode to ASCII). (Tony)
- Fixed bug #39458 (ftp_nlist() returns false on empty dirs). (Nuno)
- Fixed bug #39354 (Allow building of curl extension against libcurl
  7.16.0). (Ilia)