@@ -21,6 +21,13 @@ extern char *gd_strtok_r(char *s, char *sep, char **state);
 #define gdPFree(ptr)		pefree(ptr, 1)
 #define gdPEstrdup(ptr)		pestrdup(ptr, 1)
 
+/* Returns nonzero if multiplying the two quantities will
+	result in integer overflow. Also returns nonzero if 
+	either quantity is negative. By Phil Knirsch based on
+	netpbm fixes by Alan Cox. */
+
+int overflow2(int a, int b);
+
 #ifdef ZTS
 #define gdMutexDeclare(x) MUTEX_T x
 #define gdMutexSetup(x) x = tsrm_mutex_alloc()
